// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly with data-testid 1`] = `
<div
  aria-describedby=""
  aria-labelledby=""
  className="dialogContentContainer typePopover sizeSmall"
  data-testid="test"
  role="dialog"
/>
`;

exports[`renders correctly with empty props 1`] = `
<div
  aria-describedby=""
  aria-labelledby=""
  className="dialogContentContainer typePopover sizeSmall"
  data-testid="dialog-content-container"
  role="dialog"
/>
`;
